# LabOS

./: CMakeLists.txt  README.md
KP/: A  B  C  Makefile
KP/doc/: kp.docx
KP/src/: A.cpp  B.cpp  C.cpp
lab1/doc/: lab1.docx
lab2/: CMakeLists.txt  main.cpp
lab2/doc/: lab2.docx
lab2/include/: parent.hpp
lab2/src/: child.cpp  parent.cpp
lab3/: CMakeLists.txt  main.cpp
lab3/doc/: lab3.docx
lab3/include/: t_handler.hpp
lab3/src/: t_handler.cpp
lab4/: CMakeLists.txt  main.cpp
lab4/doc/: lab4.docx
lab4/include/: parent.hpp
lab4/src/: parent.cpp
lab5/: CMakeLists.txt
lab5/doc/: lab5.docx
lab5/src/: func1.cpp  func2.cpp  prog1.cpp  prog2.cpp
lab6_8/doc/: lab6-8.docx
lab6_8/src/: distribution.cpp
tests/: CMakeLists.txt  lab2_test.cpp  lab3_test.cpp  lab4_test.cpp  lab5_test1.cpp  lab5_test2.cpp
