add_library(dyn1 SHARED src/func1.cpp)
add_library(dyn2 SHARED src/func2.cpp)
target_include_directories(dyn1 PRIVATE include)
target_include_directories(dyn2 PRIVATE include)
add_executable(prog11 src/prog1.cpp include/lab5.hpp)
add_executable(prog12 src/prog1.cpp include/lab5.hpp)
target_include_directories(prog11 PRIVATE include)
target_include_directories(prog12 PRIVATE include)
target_link_libraries(prog11 PRIVATE dyn1)
target_link_libraries(prog12 PRIVATE dyn2)
add_executable(prog2 src/prog2.cpp)
target_link_libraries(prog2 PRIVATE ${CMAKE_DL_LIBS})
target_include_directories(prog2 PRIVATE include)
